# gaiai

./: .gitignore  README.md
.github/workflows/: ci.yml
minigames/pong/: CMakeLists.txt  Main.qml  gameentity.cpp  gameentity.h  inputhandler.cpp  inputhandler.h  main.cpp  pongminigame.cpp  pongminigame.h
src/: .qmlls.ini  CMakeLists.txt  Main.qml  framepaginator.cpp  framepaginator.h  gaiailogic.h  gamebackend.cpp  gamebackend.h  ingamebutton.cpp  ingamebutton.h  ingamecheckbox.cpp  ingamecheckbox.h  ingamecityobjects.cpp  ingamecityobjects.h  ingamedesktop.cpp  ingamedesktop.h  ingamefullscreen.cpp  ingamefullscreen.h  ingamemenu.cpp  ingamemenu.h  ingameradiobutton.cpp  ingameradiobutton.h  ingameshifttimer.cpp  ingameshifttimer.h  ingamestartmenu.cpp  ingamestartmenu.h  ingametablelist.cpp  ingametablelist.h  ingametaskbar.cpp  ingametaskbar.h  ingametree.cpp  ingametree.h  ingamewindow.cpp  ingamewindow.h  ingamewindowdefaultheader.cpp  ingamewindowdefaultheader.h  ingamewindowpage.cpp  ingamewindowpage.h  main.cpp  systemsettings.cpp  (+3 more)
src/Controls/: CommonMenu.qml  CommonMenuList.qml  ContentButton.qml  DashRectangle.qml  DefaultButton.qml  DefaultHeaderWindow.qml  DefaultWindow.qml  FlickableArea.qml  HorizontalDashLine.qml  IconButton.qml  InformationPanel.qml  MenuPanel.qml  Panel.qml  PlainText.qml  RadioButton.qml  StartMenuPopup.qml  TableList.qml  TaskBar.qml  ToggleButton.qml  Tree.qml  TreeItem.qml  TreeLevel.qml  WindowPanel.qml
src/Controls/Buttons/: ContentButton.qml  DefaultButton.qml  IconButton.qml  ToggleButton.qml
src/Controls/Lines/: HorizontalLine.qml  RightTriangle.qml  VerticalDashLine.qml  VerticalLine.qml
src/Controls/Panels/: ButtonPanel.qml  CheckBoxPanel.qml  GridCanvasPanel.qml  RevertedPanel.qml
src/GaiaiLogic/GagagSourceGenerators/: GaiaiSourceGenerators.csproj  SciterModelGenerator.cs
src/GaiaiLogic/GaiaiHTML/: computer.jfif  game.css  game.html  index.html  menudocuments2.jfif  menuhelp.jfif  menusettings.jfif  stylew95.html  suitcase.jfif  w95style.css
src/GaiaiLogic/GaiaiLibrary/: GaiaiLibrary.csproj  GaiaiLogicLibrary.cs  GaiaiLogicLibraryInternal.cs  generatelibrary.ps1  library.schema
src/GaiaiLogic/GaiaiLogic/: AssemblyInfo.cs  City.cs  GaiaiLogic.csproj  GaiaiLogic.sln  GameLibrary.cs  Program.cs  RegisterSciterBehaviours.cs  Shift.cs  ShiftTimer.cs  TriggersHub.cs
src/GaiaiLogic/GaiaiLogic/DataFiles/: Emails-en.json  Houses-en.json  Houses.en.json  Houses.json  LampPosts-en.json  LampPosts.json  NewsSection-en.json  Roads-en.json  TrafficLights-en.json  Windows-en.json
src/GaiaiLogic/GaiaiLogic/HTMLComponents/: ActionArea.cs  ActionButton.cs  RadioButton.cs  RadioButtonGroup.cs  TaskBarButton.cs  TaskBarWindows.cs  TextButton.cs
src/GaiaiLogic/GaiaiLogic/HTMLModels/: InnerPseudoSomModel.cs  TestModelPseudoSomModel.cs  TriggersHubModel.cs
src/GaiaiLogic/GaiaiLogic/Interactive/: GameCitizen.cs  GameCitizenIncidentMode.cs  GameHouse.cs  GameHouseFuse.cs  GameHouseFuseGroup.cs  GameLampPost.cs  GamePosition.cs  GameRoad.cs  GameTrafficLight.cs
src/GaiaiLogic/GaiaiLogic/Loaders/: DataLoader.cs  LoadedStaticItems.cs  LoaderJsonSerializerContext.cs
src/GaiaiLogic/GaiaiLogic/Models/: Citizen.cs  CitizenSchedule.cs  CitizenScheduleTransport.cs  House.cs  HouseFuse.cs  HouseShape.cs  LampPost.cs  Road.cs  TrafficLight.cs  TrafficLightItem.cs
src/GaiaiLogic/GasiaiLogicTests/: CityUnitTests.cs  GaiaiLogicTests.csproj  GameCitizenUnitTests.cs  GameHouseUnitTests.cs  GameLampPostUnitTests.cs  GameTrafficLightUnitTests.cs  ShiftTimerUnitTests.cs  TriggerHubUnitTests.cs
src/GaiaiLogic/TestConsole/: Program.cs  TestConsole.csproj
src/Models/: gamecitizen.cpp  gamecitizen.h  gameemailmodel.cpp  gameemailmodel.h  gameemailsectionmodel.cpp  gameemailsectionmodel.h  gamehouse.cpp  gamehouse.h  gamelamppost.cpp  gamelamppost.h  gamemenumodel.cpp  gamemenumodel.h  gamerssitemmodel.cpp  gamerssitemmodel.h  gamestartscreenmodel.cpp  gamestartscreenmodel.h  gametablecolumn.cpp  gametablecolumn.h  gametaskmodel.cpp  gametaskmodel.h  gametasksectionmodel.cpp  gametasksectionmodel.h  gametrafficlightmodel.cpp  gametrafficlightmodel.h  gametreesectionmodel.cpp  gametreesectionmodel.h  lamppost.cpp  lamppost.h  translationsmodel.cpp  translationsmodel.h
src/PageModels/: emailclientpage.cpp  emailclientpage.h  rssreaderpage.cpp  rssreaderpage.h  runpage.cpp  runpage.h  smarttrackerpage.cpp  smarttrackerpage.h
src/Pages/: EmailClientPage.qml  EmailClientPage.qml.autosave  OnboardingPage.qml  RssReaderPage.qml  RunPage.qml  ShutDownPage.qml  SmartTrackerPage.qml  TestsPage.qml
src/TextContents/: citizens.en.json  emailContents.en.json  fullscreen.en.json  houses.en.json  newsContents.en.json  newsTree.en.json  taskContents.en.json  trafficlights.en.json  windows.en.json
